# PyeDNA

./: .gitignore  DFT_gpu.py  LICENSE  README.md  config.sh  config.sh.mask  fileProcessing.py  geomTools.py  main.py  pyedna.toml  pyproject.toml  qm.params.in  quantumTools.py  requirements.txt  structure.py  trajectory.py  utils.py
createStructure/: connectparms.frcmod
createStructure/CY3/: CY3.cdx  CY3_symm_info.txt  attach_info_CY3.txt
createStructure/CY5/: CY5.cdx  CY5.smi  CY5_symm_info.txt  attach_info_CY5.txt
createStructure/dnaCY3_CY5_4nt/: dna_4nt.prmtop  dna_4nt.rst7  dna_4nt_tleap.in
createStructure/nuc/: a.out  nuc.c  nuc.nab  tleap.out
data/dna_templates/: double_helix.nab
data/md_templates/: eq1.in  eq2.in  forces.in  min1.in  min2.in  prod.in
dump/: cy3.cjson  cy3.fh  cy3.gzmat  cy3.mol  cy3.smi  cy3.xyz  cy3py.xyz  dump.py  ff_opt_cy3.xyz  output.xyz  output_optimized.xyz
jobs/: analyze_traj_cpu.sh  analyze_traj_gpu.sh  create_dye.sh  create_dye_norm.sh  create_structure.sh  do_md_gpu.sh  do_min.sh  get_forces.sh  get_forces_dye.sh  vibrations.sh
scripts/: analyze_traj.py  create_dye.py  create_structure.py  do_md.py  modify_prmtop.py  vibrational.py
src/pyedna/: __init__.py  config.py  const.py  fileproc.py  geomtools.py  plot_utils.py  pyscf_utils.py  qm_driver.py  quanttools.py  structure.py  trajectory.py  utils.py
src/pyedna.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/eq/: convert_traj.sh  dna_test_eq1.out  dna_test_eq2.in  dna_test_eq2.out  run_eq_test.sh
test/gpu/: dna_test_eq1.in  dna_test_eq2.in  run_gpu.sh
(+99 files in other folders)
